- Improved md5() implementation. (Solar Designer, Dmitry)

- Upgraded bundled sqlite to version 3.5.6. (Scott)

- Fixed html_entity_decode() incorrectly converting numeric html entities
  to different characters with cp1251 and cp866. (Scott)
- Fixed possible crash in ext/soap because of uninitialized value. (Zdash Urf)
- Fixed PECL bug #12431 (OCI8 ping functionality is broken). (Oracle Corp.)

- Fixed bug #44394 (Last two bytes missing from output). (Felipe)
- Fixed bug #44336 (Improve pcre UTF-8 string matching performance).
  (frode at coretrek dot com, Nuno)
- Fixed bug #44214 (Crash using preg_replace_callback() and global variable).
  (Nuno, Scott)
- Fixed bug #43960 (strtotime() returns timestamp in the future when given a
  bogus string).
- Fixed bug #43808 (date_create never fails (even when it should)). (Derick)
- Fixed bug #43527 (DateTime created from a timestamp reports environment
  timezone). (Derick)
- Fixed bug #43426 (crash on nested call_user_func() calls). (Dmitry)
- Fixed bug #43323 (Wrong count abstract methods). (Felipe, Dmitry)
- Fixed bug #43075 (Support 2007-11-01T24:00:00+00:00). (Derick)
- Fixed bug #43003 (Invalid timezone reported for DateTime objects constructed
  using a timestamp). (Derick)
- Fixed bug #43143 (Warning about empty IV with MCRYPT_MODE_ECB). (Derick)
- Fixed bug #43136 (possible crash on script execution timeout.
  The EG(function_state_ptr) is completely removed,
  EG(current_execute_data)->function_state must be used instead). (Dmitry)
- Fixed bug #42952 (soap cache file is created with insecure permissions).
  (Dmitry)
- Fixed bug #42868 (Floats cast to integer produce unpredictable results).
  (Zoe Slattery)
- Fixed bug #42848 (Status: header incorrect under FastCGI). (Dmitry)
- Fixed bug #42773 (WSDL error causes HTTP 500 Response). (Dmitry)
- Fixed bug #42737 (preg_split('//u') triggers a E_NOTICE with newlines). (Nuno)
- Fixed bug #42736 (xmlrpc_server_call_method() crashes). (Tony)